--- a/index.html
+++ b/index.html
@@ -25,29 +25,32 @@
     <script type="text/javascript" src="js/js.js"></script>
 </head>
 <body>
-    
-        <div class="collapse navbar-collapse justify-content-end " id="navbarCollapse">
-            <ul class=" navbar-nav ml-auto menus ">
-              <li class=" nav-item active">
+    <nav class="menu navbar navbar-expand-lg navbar-light ">
+      <div class="container">
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+   
+        <div class="collapse navbar-collapse justify-content-end " id="navbarTogglerDemo03">
+            <ul class=" navbar-nav ml-auto my-2">
+              <li class=" nav-item active text-right">
                 <a class=" nav-link " href="#navbarCollapse"><stong>Hola</stong> <span class="sr-only">(current)</span></a>
               </li>
-              <li class=" nav-item ">
+              <li class=" nav-item text-right">
                 <a class="nav-link " href="#conocimiento">Conocimientos</a>
               </li>
-              <li class=" nav-item ">
+              <li class=" nav-item text-right ">
                 <a class=" nav-link" href="#proyectos">Proyectos</a>
               </li>
-              <li class=" nav-item ">
+              <li class=" nav-item text-right">
                 <a class=" btn btn-danger btn-md" href="#contacto" role="button">Contacto</a>
                 <!--<a class="nav-link" href="#">Contacto</a>-->
               </li>
             </ul>
-            <nav class="menu navbar navbar-expand-lg navbar-light ">
-              <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-         </nav>
         </div>
+      </div>
+    </nav>
+  
  <header>
     <div class="jumbotron">
         <div class="container">
