--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
-    <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+    <script type ="text/javascript" src="js/jquery-3.6.0.min.js"></script>
     <!-- Normalize -->	
     <link rel="stylesheet" href="css/normalize.css">
     <!--bootstrap-->
@@ -17,12 +17,10 @@
 
     <script type="text/javascript" src="js/jquery-ui/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/js.js"></script>
-        
+    
     <!--LLamo a las fuentes externas Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Julius+Sans+One&family=M+PLUS+1p:wght@700&family=MuseoModerno:wght@200;342;413&family=Fredoka+One&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   
-   <!--<script type="text/javascript" src="js/jquery-ui/jquery-ui.min.js"></script>-->
-    <script type="text/javascript" src="js/js.js"></script>
 </head>
 <body>
     <nav class="menu navbar navbar-expand-lg navbar-light ">
@@ -33,8 +31,8 @@
    
         <div class="collapse navbar-collapse justify-content-end " id="navbarTogglerDemo03">
             <ul class=" navbar-nav ml-auto my-2">
-              <li class=" nav-item active text-right">
-                <a class=" nav-link " href="#navbarCollapse"><stong>Hola</stong> <span class="sr-only">(current)</span></a>
+              <li class=" nav-item active text-right" id="boton" onClick="cambiaColor();" >
+                <a class=" nav-link " href="#navbarCollapse"><strong>Hola</strong><span class="sr-only">(current)</span></a>
               </li>
               <li class=" nav-item text-right">
                 <a class="nav-link " href="#conocimiento">Conocimientos</a>
@@ -77,7 +75,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md text-center my-4">
-          <h1 class=" saludo">CONOCIMIENTOS</h1>
+          <h1 class=" titulos">Conocimientos</h1>
         </div>
       </div> 
     </div>
@@ -174,7 +172,8 @@
           <p class="card-text">HTML - CSS3 y JavaScript.</p>
         </div>
         <div class="card-footer">
-          <small class="text-muted"><a href="" class="">Web page</a></small>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><a href=" https://elisss-create.github.io/curriculum/">Demo</a></button>
+          <button type="button" class="btn btn-primary"><a href="https://github.com/Elisss-create/curriculum.git">Git</a></button>
         </div>
       </div>
       <div class="card" id="simple">
@@ -184,7 +183,8 @@
           <p class="card-text">HTML - CSS3 y Bootstrap.</p>
         </div>
         <div class="card-footer">
-          <small class="text-muted"><a href=" https://elisss-create.github.io/proyecto-simple/" target="blanck" class="">Web page</a></small>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><a Target="_blank" href=" https://elisss-create.github.io/proyecto-simple/">Demo</a></button>
+          <button type="button" class="btn btn-primary"><a Target="_blank" href="https://github.com/Elisss-create/proyecto-simple.git">Git</a></button>
         </div>
       </div>
       <div class="card" id="meri">
@@ -194,7 +194,8 @@
           <p class="card-text">HTML - CSS3 y RWD</p>
         </div>
         <div class="card-footer">
-          <small class="text-muted"><a href="https://elisss-create.github.io/Hotel-Meridian/" target="blanck" class="">Web page</a></small>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><a href="https://elisss-create.github.io/Hotel-Meridian/">Demo</a></button>
+          <button type="button" class="btn btn-primary"><a href="https://github.com/Elisss-create/Hotel-Meridian.git">Git</a></button>
         </div>
       </div>
       <div class="card" id="lewis">
@@ -204,7 +205,19 @@
           <p class="card-text">HTML - CSS3 y Bootstrap.</p>
         </div>
         <div class="card-footer">
-          <small class="text-muted"><a href="https://elisss-create.github.io/portfolio-bootstrap/" target="blanck" class="">Web page</a></small>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><a href="https://elisss-create.github.io/portfolio-bootstrap/">Demo</a></button>
+          <button type="button" class="btn btn-primary"><a href="https://github.com/Elisss-create/portfolio-bootstrap.git">Git</a></button>
+        </div>
+      </div>
+      <div class="card" id="encritador">
+        <img src="img/encriptador.JPG" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Encriptador</h5>
+          <p class="card-text">HTML - JavaScript.</p>
+        </div>
+        <div class="card-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><a Target="_blank" href="https://elisss-create.github.io/ChallengerEncriptador/">Demo</a></button>
+          <button type="button" class="btn btn-primary"><a Target="_blank" href="https://github.com/Elisss-create/ChallengerEncriptador.git">Git</a></button>
         </div>
       </div>
     </div>
@@ -260,11 +273,13 @@
   </footer>
 
 
-    <!-- Biblioteca de JavaScript 
-<script src="js/jquery-3.5.1.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>-->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
- <!--Recursos de interactiviadad de Bootstrap,
+    <!-- Biblioteca de JavaScript -->
+<!--<script type="text/javascript" src="js/jquery-ui/jquery-ui.min.js"></script>-->
+<!--script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>-->
+ <!-- CSS only -->
+<enlace href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="hoja de estilo" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!--Recursos de interactividad de Bootstrap,
 que funcionan con jQuery -->
 <script src="js/bootstrap.min.js"></script>
 </body>
